--- a/src/app/lista-animais-perdidos/lista-animais-perdidos.component.html
+++ b/src/app/lista-animais-perdidos/lista-animais-perdidos.component.html
@@ -15,7 +15,7 @@
                     <mat-card-title style="text-align:center;">{{animalperdido.especie}}</mat-card-title>
                 </mat-card-header>
                 <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
-                <img mat-card-image src="http://localhost:3000{{animalperdido.foto}}" alt="Photo of a Shiba Inu">
+                <img mat-card-image src="{{urlbackend}}{{animalperdido.foto}}" alt="Photo of a Shiba Inu">
                 <mat-card-content>
                     <h4>Características Gerais:</h4>
                     <p>
