--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,15 @@
 h2{
     color: white; 
 }
+.example-button-row button,
+.example-button-row a {
+  margin-right: 8px;
+  display: inline; 
+  float: right;
+}
+.item-4 span{ 
+    font-weight: bold; 
+    font-size: 15pt; 
+    margin: 5px; 
+    line-height: 27px; 
+}
