--- a/src/app/cadastro-animais-perdidos/cadastro-animais-perdidos.component.css
+++ b/src/app/cadastro-animais-perdidos/cadastro-animais-perdidos.component.css
@@ -13,3 +13,11 @@ li {
   .example-full-width {
     width: 100%;
   }
+
+  .main-container {
+    display: flex;
+    flex-direction: column;
+    min-height: -webkit-fill-available;
+    min-width: 300px;
+    max-height: -webkit-fill-available;
+  }
