--- a/src/app/cadastro-animais-perdidos/cadastro-animais-perdidos.component.html
+++ b/src/app/cadastro-animais-perdidos/cadastro-animais-perdidos.component.html
@@ -1,4 +1,4 @@
-<div fxFlex fxLayout="column" style="height:100vh" >
+<div fxFlex fxLayout="column" >
 
         <div class="container"
         fxLayout
@@ -6,93 +6,104 @@
         fxLayoutAlign="center"
         fxLayoutGap="10px"
         fxLayoutGap.xs="0">
-            <div class="item item-1" fxFlex="80%">
-            <h2>Cadastrar Animal Perdido</h2>
+            <div class="item item-1" fxFlex>
+                <div class="container"  fxLayout fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutGap.xs="0">
 
-            <div *ngIf="response" style="background:#696969; color:white;">
-                <p>Animal Cadastrado com Sucesso!</p>
-            </div>
-
-            <mat-card class="example-card">
-                    <mat-card-header>
-                        <div mat-card-avatar class="example-header-image"></div>
-                        <mat-card-title style="text-align:center;">Cadastro de Animais</mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <div>
-
-                            <div class="example-form">
-                                    
-                                    <mat-form-field appearance="fill" class="example-full-width">
-                                    <mat-label>Especíe:</mat-label>
-                                    <input matInput [(ngModel)] = "request.especie">
-                                    </mat-form-field>
-                                    
-                                    <br>
-
-                                    <mat-form-field appearance="fill" class="example-full-width">
-                                    <mat-label>Caracteristícas Fisícas:</mat-label>
-                                    <textarea matInput [(ngModel)] = "request.caracteristicas_fisicas" ></textarea>
-                                    </mat-form-field>
-
-                                    <br>
-
-                                    <mat-form-field appearance="fill" class="example-full-width">
-                                        <mat-label>Local:</mat-label>
-                                        <input matInput placeholder="Ex. Rua Emereciana Camargo Batista, 5 - Santa Marta" [(ngModel)] = "request.onde">
-                                        </mat-form-field>
-
-                                        <br>
-
-                                        <mat-form-field>
-                                        <mat-label> Data </mat-label>
-                                        <input matInput [matDatepicker]="picker" [(ngModel)] = "request.quando" >
-                                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                        <mat-datepicker #picker></mat-datepicker>
-                                        </mat-form-field>
-
-                                        <!-- <mat-form-field>
-                                            <mat-label> Foto: </mat-label>
-                                            <input matInput [matDatepicker]="picker" [(ngModel)] = "request.quando" >
-                                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                                            <mat-datepicker #picker></mat-datepicker>
-                                        </mat-form-field> -->
-                                </div>
-
-                        <label>Foto:</label>
-                            
-                        <div style="text-align:center; margin-top: 5px; ">
-                                <mat-card style="margin-top:10px; width: 40%;">  
-                                    <mat-card-content>  
-                                        <ul>  
-                                            <li *ngFor="let file of files">  
-                                                <mat-progress-bar [value]="file.progress"></mat-progress-bar>  
-                                                
-                                                <span id="file-label">  
-                                                    
-                                                </span>  
-                                            </li>  
-                                        </ul>  
-                                    </mat-card-content>  
-                                    <mat-card-actions>  
-                                        <button mat-button color="warn" (click)="onClick()">  
-                                            <mat-icon>file_upload</mat-icon>  
-                                            Upload  
-                                        </button>  
-                                    </mat-card-actions>  
-                                </mat-card>
-                                <input type="file" #fileUpload id="fileUpload" name="fileUpload" accept="image/*" style="display:none;" /></div>
-                        <br><br>
-                    </div>
-                </mat-card-content>
+                    <div class="item item-2" fxFlex fxFlexOffset="50px" fxFlex="500px" style="margin-bottom:500px"    fxFlexOffset.xs="0">
+                        
+                        <div *ngIf="response" style="background:#696969; color:white; padding: 5px; border-radius: 5px;">
+                            <p>Animal Cadastrado com Sucesso!</p>
+                        </div>
             
-                <mat-card-actions>
-                     <button mat-raised-button color="primary" (click)="save()">Salvar</button>
-                </mat-card-actions>
-            </mat-card>
+                        <mat-card class="example-card">
+                                <mat-card-header>
+                                    <div mat-card-avatar class="example-header-image"></div>
+                                    <mat-card-title style="text-align:center;">Cadastro de Animais</mat-card-title>
+                                </mat-card-header>
+                                <mat-card-content>
+                                    <div>
+            
+                                        <div class="example-form">
+                                                
+                                                <mat-form-field appearance="fill" class="example-full-width">
+                                                <mat-label>Especíe:</mat-label>
+                                                <input matInput [(ngModel)] = "request.especie">
+                                                </mat-form-field>
+                                                
+                                                <br>
+            
+                                                <mat-form-field appearance="fill" class="example-full-width">
+                                                <mat-label>Caracteristícas Fisícas:</mat-label>
+                                                <textarea matInput [(ngModel)] = "request.caracteristicas_fisicas" ></textarea>
+                                                </mat-form-field>
+            
+                                                <br>
+            
+                                                <mat-form-field appearance="fill" class="example-full-width">
+                                                    <mat-label>Local:</mat-label>
+                                                    <input matInput placeholder="Ex. Rua Emereciana Camargo Batista, 5 - Santa Marta" [(ngModel)] = "request.onde">
+                                                    </mat-form-field>
+            
+                                                    <br>
+            
+                                                    <mat-form-field>
+                                                    <mat-label> Data </mat-label>
+                                                    <input matInput [matDatepicker]="picker" [(ngModel)] = "request.quando" >
+                                                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                                    <mat-datepicker #picker></mat-datepicker>
+                                                    </mat-form-field>
+            
+                                                    <!-- <mat-form-field>
+                                                        <mat-label> Foto: </mat-label>
+                                                        <input matInput [matDatepicker]="picker" [(ngModel)] = "request.quando" >
+                                                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                                        <mat-datepicker #picker></mat-datepicker>
+                                                    </mat-form-field> -->
+                                            </div>
+            
+                                    <label>Foto:</label>
+                                        
+                                    <div style="text-align:center; margin-top: 5px; ">
+                                            <mat-card style="margin-top:10px; width: 40%;">  
+                                                <mat-card-content>  
+                                                    <ul>  
+                                                        <li *ngFor="let file of files">  
+                                                            <mat-progress-bar [value]="file.progress"></mat-progress-bar>  
+                                                            
+                                                            <span id="file-label">  
+                                                                
+                                                            </span>  
+                                                        </li>  
+                                                    </ul>  
+                                                </mat-card-content>  
+                                                <mat-card-actions>  
+                                                    <button mat-button color="warn" (click)="onClick()">  
+                                                        <mat-icon>file_upload</mat-icon>  
+                                                        Upload  
+                                                    </button>  
+                                                </mat-card-actions>  
+                                            </mat-card>
+                                            <input type="file" #fileUpload id="fileUpload" name="fileUpload" accept="image/*" style="display:none;" /></div>
+                                </div>
+                            </mat-card-content>
+                        
+                            <mat-card-actions>
+                                 <button mat-raised-button color="primary" (click)="save()">Salvar</button>
+                            </mat-card-actions>
+                        </mat-card>
+                </div>
+
+                </div>
+            
         </div>
     </div>
 </div>
+
+
+
+
+
+
 <div *ngIf = "response">
     <h3>Cadastrado com Sucesso ! </h3>
     <label>Especíe: {{response.data.especie}}</label> <br>
