Alterações feitas no layot

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,16 +6,16 @@
     fxLayoutAlign="center"
     fxLayoutGap="10px"
     fxLayoutGap.xs="0" style="background:#ddd; min-height: 50px;">
-      <div class="item item-4" fxFlex fxFlexOffset="50px"  fxFlexOffset.xs="0"><span style="line-height:47px;">App Animais Perdidos</span></div>
+      <div class="item item-4" fxFlex fxFlexOffset="50px"  fxFlexOffset.xs="0"><span>Animais Perdidos</span></div>
       <div class="item item-5 example-button-row" fxFlex>
 
-          <a routerLink= "/lista-animais-perdidos" mat-flat-button style="margin:10px;" >Listar Animais Perdidos</a>
-          <a routerLink= "/cadastro-animais-perdidos" mat-flat-button style="margin:10px;" >Cadastre Animais Perdidos</a>
-
+          <a routerLink= "/lista-animais-perdidos" mat-flat-button>Listar</a>
+          <a routerLink= "/cadastro-animais-perdidos" mat-flat-button >Cadastro</a>
+          
       </div>
   </div>
     
-  
+
 
       <div fxFlex fxLayout="column" fxLayoutGap="10px" >  
         
