--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,11 +9,16 @@ h2{
 }
 .item-4 span{ 
     font-weight: bold; 
-    font-size: 15pt; 
+    font-size: 25pt; 
     margin: 5px; 
-    line-height: 27px; 
+    line-height: 45px;
+    font-family: Helvetica, sans-serif;
+    color: #666666;
 }
 
 html, body{
     height:100% ;
+    background-color: #2b2b2b;
+
 }
+
