--- a/src/app/cadastro-animais-perdidos/cadastro-animais-perdidos.component.css
+++ b/src/app/cadastro-animais-perdidos/cadastro-animais-perdidos.component.css
@@ -21,3 +21,12 @@ li {
     min-width: 300px;
     max-height: -webkit-fill-available;
   }
+  .alerta-cadastro {
+    background:#696969; 
+    color:white; 
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    line-height: 25px;
+
+  }
