--- a/src/app/update-animais-perdidos/update-animais-perdidos.component.css
+++ b/src/app/update-animais-perdidos/update-animais-perdidos.component.css
@@ -13,3 +13,12 @@ li {
   .example-full-width {
     width: 100%;
   }
+  .alerta-cadastro {
+    background:#696969; 
+    color:white; 
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    line-height: 25px;
+    
+  }
