--- a/src/app/update-animais-perdidos/update-animais-perdidos.component.html
+++ b/src/app/update-animais-perdidos/update-animais-perdidos.component.html
@@ -11,7 +11,7 @@
 
                     <div class="item item-2" fxFlex fxFlexOffset="50px" fxFlex="500px" style="margin-bottom:500px"    fxFlexOffset.xs="0">
                      
-                            <div *ngIf="response" style="background:#696969; color:white; padding: 5px; border-radius: 5px;">
+                            <div *ngIf="response" class="alerta-cadastro">
                                     <p>Animal Atualiizado com Sucesso!</p>
                                 </div>
                     
@@ -87,7 +87,10 @@
                                 
                                     <mat-card-actions>
                                          <button mat-raised-button color="primary" (click)="update()">Salvar</button>
+                                         <a routerLink= "/lista-animais-perdidos" mat-raised-button color = "warn"> Voltar</a>
                                     </mat-card-actions>
+                                   
+                                    
                                 </mat-card>
                     </div>
                 </div>
