mudando url das imagens

--- a/src/app/lista-animais-perdidos/lista-animais-perdidos.component.html
+++ b/src/app/lista-animais-perdidos/lista-animais-perdidos.component.html
@@ -14,7 +14,7 @@
                     <div mat-card-avatar class="example-header-image"></div>
                     <mat-card-title style="text-align:center;">{{animalperdido.especie}}</mat-card-title>
                 </mat-card-header>
-                <img mat-card-image src="{{urlbackend}}{{animalperdido.foto}}" >
+                <img mat-card-image src="{{ (animalperdido.foto.substr(0,4) == 'http') ? animalperdido.foto : urlbackend + animalperdido.foto}}" >
                 <mat-card-content>
                     <h4>Características Gerais:</h4>
                     <p>
